--- a/package.json
+++ b/package.json
@@ -5,8 +5,20 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": ""
+    "build": "npm test && tsc",
+    "test": "mocha -r ts-node/register ./tests/**/*.spec.ts"
   },
   "author": "Stevan Freeborn",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "axios": "^1.2.4"
+  }
 }
