--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   "scripts": {
     "build": "npm tests && tsc",
     "tests": "mocha -r ts-node/register ./tests/**/*.spec.ts",
-    "test": "mocha -r ts-node/register"
+    "test": "mocha -r ts-node/register",
+    "test-coverage": "nyc npm run tests"
   },
   "author": "Stevan Freeborn",
   "license": "MIT",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
