--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm tests && tsc",
+    "build": "npm run tests && tsc",
     "tests": "mocha -R progress -r ts-node/register ./tests/**/*.spec.ts",
     "test": "mocha -r ts-node/register",
     "test-coverage": "nyc npm run tests"
