--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.13",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
+    "sinon": "^15.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
