--- a/.nycrc
+++ b/.nycrc
@@ -2,18 +2,8 @@
   "extends": "@istanbuljs/nyc-config-typescript",
   "check-coverage": true,
   "all": true,
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "src/index.ts",
-    "**/*.spec.ts"
-  ],
-  "reporter": [
-    "html",
-    "lcov",
-    "text",
-    "text-summary"
-  ],
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/index.ts", "**/*.spec.ts"],
+  "reporter": ["html", "lcov", "text", "text-summary"],
   "report-dir": "coverage"
 }
