--- a/.nycrc
+++ b/.nycrc
@@ -3,7 +3,7 @@
   "check-coverage": true,
   "all": true,
   "include": ["src/**/*.ts"],
-  "exclude": ["src/index.ts", "**/*.spec.ts"],
+  "exclude": ["src/onspringApiSdk.ts", "**/*.spec.ts"],
   "reporter": ["html", "lcov", "text", "text-summary"],
   "report-dir": "coverage"
 }
