--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["tests/**/*.ts", "src/index.ts"]
+  "include": ["src/**/*.ts", "tests/**/*.ts"]
 }
