--- a/.nycrc
+++ b/.nycrc
@@ -1,6 +1,10 @@
 {
   "extends": "@istanbuljs/nyc-config-typescript",
   "check-coverage": true,
+  "branches": 80,
+  "lines": 80,
+  "functions": 80,
+  "statements": 80,
   "all": true,
   "include": ["src/**/*.ts"],
   "exclude": ["src/index.ts", "**/*.spec.ts"],
