--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "axios": "^1.2.4"
+    "axios": "^1.2.4",
+    "form-data": "^4.0.0"
   }
 }
