fix: added module resolution to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strictNullChecks": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "es2015",
     "declaration": true,
     "outDir": "./dist",
