--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es2015",
+    "module": "ES6",
     "outDir": "./dist/esm"
   }
 }
