--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "strictNullChecks": true,
-    "moduleResolution": "node",
     "declaration": true,
     "declarationDir": "./dist/types",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "target": "ES6",
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
   "ts-node": {
