--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onspring-api",
+  "name": "onspring-api-sdk",
   "version": "1.0.0",
   "description": "A javascript SDK for interacting with version 2 of the Onspring API.",
   "keywords": [
