--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "format-staged": "pretty-quick --staged",
     "format": "pretty-quick",
     "build": "npm run lint-fix && npm run tests && npm run format && npm run clean && tsc --project tsconfig.cjs.json & tsc --project tsconfig.esm.json",
-    "tests": "mocha -R progress -r ts-node/register ./tests/**/*.spec.ts",
     "test": "mocha -r ts-node/register",
+    "tests:unit": "mocha -R progress -r ts-node/register ./tests/**/*.spec.ts",
+    "tests:integration": "mocha -R progress -r ts-node/register ./integrationTests/**/*.spec.ts",
+    "tests": "mocha -R progress -r ts-node/register ./tests/**/*.spec.ts ./integrationTests/**/*.spec.ts",
     "test-coverage": "nyc npm run tests",
     "prepare": "husky install"
   },
@@ -53,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
