--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs",
-      "target": "es2015"
+      "target": "ES6"
     },
     "moduleTypes": {
       "*.ts": "cjs"
