--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "License.txt",
+    "package.json"
+  ],
   "main": "dist/cjs/index.js",
   "types": "dist/index.d.ts",
   "exports": {
