feat: add integration tests for getReportById and getReportsByAppId methods

--- a/integrationTests/example.env
+++ b/integrationTests/example.env
@@ -17,3 +17,6 @@ TEST_TEXT_FIELD=NEEDS_TO_BE_SET
 TEST_ATTACHMENT=NEEDS_TO_BE_SET
 TEST_IMAGE_FIELD=NEEDS_TO_BE_SET
 TEST_IMAGE=NEEDS_TO_BE_SET
+TEST_REPORT=NEEDS_TO_BE_SET
+TEST_REPORT_NO_ACCESS=NEEDS_TO_BE_SET
+TEST_REPORT_WITH_CHART_DATA=NEEDS_TO_BE_SET
