fix: update example.env

--- a/integrationTests/example.env
+++ b/integrationTests/example.env
@@ -17,3 +17,8 @@ TEST_TEXT_FIELD=NEEDS_TO_BE_SET
 TEST_ATTACHMENT=NEEDS_TO_BE_SET
 TEST_IMAGE_FIELD=NEEDS_TO_BE_SET
 TEST_IMAGE=NEEDS_TO_BE_SET
+TEST_LIST_FIELD=NEEDS_TO_BE_SET
+TEST_LIST_FIELD_NO_ACCESS=NEEDS_TO_BE_SET
+TEST_LIST_ID=NEEDS_TO_BE_SET
+TEST_LIST_ID_NO_ACCESS=NEEDS_TO_BE_SET
+TEST_LIST_ITEM_ID_NO_ACCESS=NEEDS_TO_BE_SET
