feat: add integration tests for getRecordById method

--- a/integrationTests/example.env
+++ b/integrationTests/example.env
@@ -25,3 +25,4 @@ TEST_LIST_ITEM_ID_NO_ACCESS=NEEDS_TO_BE_SET
 TEST_REPORT=NEEDS_TO_BE_SET
 TEST_REPORT_NO_ACCESS=NEEDS_TO_BE_SET
 TEST_REPORT_WITH_CHART_DATA=NEEDS_TO_BE_SET
+TEST_SURVEY_RECORD_ID=NEEDS_TO_BE_SET
