--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -10,15 +10,12 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
     steps:
       - name: Check out repository
-      - uses: actions/checkout@v3
-
+        uses: actions/checkout@v3
       - name: Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
       - name: Install dependencies
         run: npm ci
-
       - name: Run lint-fix
         run: npm run lint-fix
