--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -19,3 +19,5 @@ jobs:
         run: npm install
       - name: Run lint-fix
         run: npm run lint-fix
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
