fix: correct workflow

--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -70,12 +70,14 @@ jobs:
           TEST_SURVEY_RECORD_ID: ${{ vars.TEST_SURVEY_RECORD_ID }}
           TEST_TEXT_FIELD: ${{ vars.TEST_TEXT_FIELD }}
   publish_test_coverage:
+    needs: test
     name: publish_test_coverage
     runs-on: ubuntu-latest
     steps:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
   format:
+    needs: publish_test_coverage
     name: format
     runs-on: ubuntu-latest
     steps:
