fix: update workflow

--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -20,6 +20,7 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           commit: --no-verify
+          push: --force
   test:
     needs: lint
     name: test
