fix: update package.json versioning and engine info. fix: added triggers to workflow for pushing to master branch or pr's targeting master branch

--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -1,6 +1,12 @@
 name: lint_test_format
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   lint:
     name: lint
