--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onspring-api-sdk",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A javascript SDK for interacting with version 2 of the Onspring API.",
   "keywords": [
     "onspring",
@@ -24,7 +24,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=14.x"
   },
   "files": [
     "dist",
