fix: update workflow

--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -32,6 +32,7 @@ jobs:
           committer_name: GitHub Actions
           committer_email: actions@github.com
   test:
+    if: ${{ jobs.lint.committed == false }}
     needs: lint
     name: test
     runs-on: ubuntu-latest
