fix: update package version

--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -33,7 +33,7 @@ jobs:
           committer_name: GitHub Actions
           committer_email: actions@github.com
     outputs:
-      committed: ${{ steps.commit.committed }}
+      committed: ${{ steps.commit.outputs.committed }}
   test:
     needs: lint
     if: ${{ needs.lint.outputs.committed == false }}
