fix: update workflow

--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -32,8 +32,11 @@ jobs:
           message: 'fix: resolve linter errors'
           committer_name: GitHub Actions
           committer_email: actions@github.com
+      - name: test
+        run: echo ${{ steps.commit.outputs.committed }}
     outputs:
       committed: ${{ steps.commit.outputs.committed }}
+    run: echo
   test:
     needs: lint
     if: needs.lint.outputs.committed == false
