--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -32,10 +32,15 @@ jobs:
           message: 'fix: resolve linter errors'
           committer_name: GitHub Actions
           committer_email: actions@github.com
-      - name: test
-        run: echo ${{ steps.commit.outputs.committed }}
     outputs:
       committed: ${{ steps.commit.outputs.committed }}
+  experiment:
+    needs: lint
+    name: experiment
+    runs-on: ubuntu-latest
+    steps:
+      - name: test
+      - run: echo needs.lint.outputs.committed 
   test:
     needs: lint
     if: needs.lint.outputs.committed == false
