fix: update workflow

--- a/.github/workflows/lint_test_format.yaml
+++ b/.github/workflows/lint_test_format.yaml
@@ -35,7 +35,7 @@ jobs:
       committed: ${{ steps.commit.outputs.committed }}
   format:
     needs: lint
-    if: ${{ needs.lint.outputs.committed }} == false
+    if: needs.lint.outputs.committed == 'false'
     name: format
     runs-on: ubuntu-latest
     steps:
@@ -70,7 +70,7 @@ jobs:
         run: echo ${{ needs.format.outputs.committed }}
   test:
     needs: format
-    if: ${{ needs.format.outputs.committed == false }}
+    if: needs.format.outputs.committed == 'false'
     name: test
     runs-on: ubuntu-latest
     strategy:
