fix: update so that pre-commit hook only includes running unit tests as part of test coverage, but when run as part of ci integration tests will be run as part of test coverage

--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -80,7 +80,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run test coverage and tests
-        run: npm run test-coverage
+        run: npm run test-coverage:ci
         env:
           API_BASE_URL: ${{ vars.API_BASE_URL }}
           SANDBOX_API_KEY: ${{ secrets.SANDBOX_API_KEY }}
