--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -2,6 +2,9 @@ name: lint_format_test
 on:
   workflow_dispatch:
   push:
+    paths-ignore:
+      - .github/
+      - .husky/
     branches:
       - master
   pull_request:
