--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -2,17 +2,17 @@ name: lint_format_test
 on:
   workflow_dispatch:
   push:
+    paths-ignore:
+      - .github/**
+      - .husky/**
     branches:
       - master
-      paths-ignore:
-      - .github/
-      - .husky/
   pull_request:
+    paths-ignore:
+      - .github/**
+      - .husky/**
     branches:
       - master
-      paths-ignore:
-      - .github/
-      - .husky/
 jobs:
   lint:
     name: lint
