--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -47,7 +47,7 @@ jobs:
           TEST_SURVEY_ID: ${{ vars.TEST_SURVEY_ID }}
           TEST_SURVEY_RECORD_ID: ${{ vars.TEST_SURVEY_RECORD_ID }}
           TEST_TEXT_FIELD: ${{ vars.TEST_TEXT_FIELD }}
-      - name: Upload build artificat
+      - name: Upload build artifact
         uses: actions/upload-artifact@v3.1.2
         with:
           name: build
