--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "package.json"
   ],
   "main": "dist/cjs/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "exports": {
     "import": "./dist/esm/index.js",
     "require": "./dist/cjs/index.js",
