fix(configuration): setup semantic versioning for pushes to the master or beta branches

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onspring-api-sdk",
-  "version": "0.0.3",
+  "version": "0.0.0-semantic-release",
   "description": "A javascript SDK for interacting with version 2 of the Onspring API.",
   "keywords": [
     "onspring",
