--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,13 +16,6 @@
       }
     ],
     "@semantic-release/npm",
-    "@semantic-release/github",
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["docs/CHANGELOG.md"],
-        "message": "chore(release): set `package.json` to ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ]
+    "@semantic-release/github"
   ]
 }
