fix: make changes to allow esm imports to work properly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "module": "commonjs",
       "target": "ES6"
     },
+    "experimentalResolver": true,
     "moduleTypes": {
       "*.ts": "cjs"
     }
