--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "plugins": ["@typescript-eslint", "mocha"],
+  "plugins": ["@typescript-eslint", "mocha", "import"],
   "extends": [
     "standard-with-typescript",
     "eslint:recommended",
@@ -13,11 +13,16 @@
   ],
   "overrides": [
     {
-      "files": ["tests/**/*.spec.ts", "integrationTests/**/*.spec.ts"],
+      "files": [
+        "tests/**/*.spec.ts",
+        "integrationTests/**/*.spec.ts",
+        "integrationTests/utils/**"
+      ],
       "rules": {
         "@typescript-eslint/no-unused-expressions": "off",
         "@typescript-eslint/consistent-type-assertions": "off",
-        "no-new": "off"
+        "no-new": "off",
+        "import/extensions": "off"
       }
     }
   ],
@@ -30,6 +35,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": "off",
     "@typescript-eslint/no-useless-constructor": "off",
-    "@typescript-eslint/no-extraneous-class": "off"
+    "@typescript-eslint/no-extraneous-class": "off",
+    "import/extensions": ["error", "always", { "ignorePackages": true }]
   }
 }
