--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "License.txt",
     "package.json"
   ],
+  "types": "dist/types/index.d.ts",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
     }
@@ -47,7 +48,7 @@
     "lint-fix": "eslint --fix --ignore-path .eslintignore --ext .js,.ts . --max-warnings=0",
     "format-staged": "pretty-quick --staged",
     "format": "pretty-quick",
-    "build": "npm run tests && npm run clean && tsc --project tsconfig.cjs.json && tsc --project tsconfig.esm.json && ./scripts/create_dist_package_json.sh",
+    "build": "npm run tests && npm run clean && tsc --project tsconfig.cjs.json && tsc --project tsconfig.esm.json && node ./scripts/create_dist_package_json.js",
     "test:unit": "mocha -r ts-node/register",
     "test:integration": "mocha -r ts-node/register -r integrationTests/mochaRootHooks.ts",
     "tests:unit": "mocha -R progress -r ts-node/register ./tests/**/*.spec.ts",
