--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -120,3 +120,5 @@ jobs:
     steps:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          directory: ./coverage/
