--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -121,4 +121,6 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
-          directory: ./coverage/
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage-final.json
+          directory: ./coverage
