--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -133,4 +133,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage-final.json
-          directory: ./coverage
+          directory: ./coverage/
