--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -117,7 +117,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.2
         with:
           name: coverage
-          path: ./coverage
+          path: ./coverage/coverage-final.json
   publish_test_coverage:
     needs: test
     name: publish_test_coverage
@@ -127,10 +127,9 @@ jobs:
         uses: actions/download-artifact@v3.0.2
         with:
           name: coverage
-          path: ./coverage
+          path: ./coverage/coverage-final.json
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage-final.json
-          directory: ./coverage/
+          files: ./coverage/coverage-final.json
