--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -123,6 +123,8 @@ jobs:
     name: publish_test_coverage
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
       - name: Download test coverage artifact
         uses: actions/download-artifact@v3.0.2
         with:
