--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "pretty-quick": "^3.1.3",
     "sinon": "^15.0.1",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.25.12",
     "typescript": "^4.9.5"
   },
   "dependencies": {
