--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -70,7 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [14.x, 16.x, 18.x, 20.x]
       fail-fast: false
     steps:
       - name: Check out repository
