--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: latest
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
         run: npm install
