--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: lts/*
       - name: Install dependencies
         run: npm install
       - name: Build package
@@ -70,7 +70,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: lts/*
       - name: Install dependencies
         run: npm install
       - name: Generate docs
