--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: lts/*
       - name: Install dependencies
         run: npm install
       - name: Run lint-fix
@@ -48,7 +48,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: lts/*
       - name: Install dependencies
         run: npm install
       - name: Run format
