--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: lts/*
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
         run: npm install
