--- a/.github/workflows/lint_format_test.yaml
+++ b/.github/workflows/lint_format_test.yaml
@@ -114,9 +114,9 @@ jobs:
           TEST_SURVEY_RECORD_ID: ${{ vars.TEST_SURVEY_RECORD_ID }}
           TEST_TEXT_FIELD: ${{ vars.TEST_TEXT_FIELD }}
       - name: Upload test coverage artifact
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-${{ matrix.node-version }}
           path: ./coverage
   publish_test_coverage:
     needs: test
@@ -128,7 +128,7 @@ jobs:
       - name: Download test coverage artifact
         uses: actions/download-artifact@v4.1.7
         with:
-          name: coverage
+          name: coverage-20.x
           path: ./coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
