--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "format-staged": "pretty-quick --staged",
     "format": "pretty-quick",
     "build": "npm run test-coverage:ci && npm run clean && tsc --project tsconfig.cjs.json && tsc --project tsconfig.esm.json && node ./scripts/create_dist_package_json.js",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build:json": "node ./scripts/create_dist_package_json.js",
     "test:unit": "mocha -r ts-node/register",
     "test:integration": "mocha -r ts-node/register -r integrationTests/mochaRootHooks.ts",
     "tests:unit": "mocha -R progress -r ts-node/register ./tests/**/*.spec.ts",
